--- a/music/style/fancypants.css
+++ b/music/style/fancypants.css
@@ -1,12 +1,13 @@
 body {
-    font-family: "Helvetica Neue", "Helvetica", "Calibri", "sans"
-}
-
-.albums {
+    font-family: "Helvetica Neue","Microsoft jHenghei" "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
+    font-size: 13px;
+    background-size: 100%;
+    background: url(http://interfacelift.com/wallpaper/D47cd523/03282_undertheglowingsky_1920x1080.jpg);
 }
 
 .album {
     font-style: italic;
+    border-radius: 4px;
 }
 
 .album .artist-name {
@@ -20,7 +21,8 @@ body {
 
 .playlist {
     color: #eee;
-    background-color: #333;
+    border-radius: 4px;
+    background-color: rgba(138, 189, 236, 0.90);
 }
 
 .playlist button.control {
@@ -54,11 +56,12 @@ body {
 }
 
 .playlist .album.current {
-    background-color: #383838;
+    background-color: rgba(82, 100, 104, 0.75);
 }
 
 .playlist .album.current .tracks .current {
-    background-color: #995599;
+    background-color: rgba(56, 62, 63, 0.75);
+    border-radius: 4px;
 }
 
 .playlist .album .tracks li {
