--- a/music/style/fancypants.css
+++ b/music/style/fancypants.css
@@ -23,6 +23,7 @@ body {
     color: #eee;
     border-radius: 4px;
     background-color: rgba(138, 189, 236, 0.90);
+    box-shadow: 0 0 35px #333;
 }
 
 .playlist button.control {
