--- a/music/style/screen.css
+++ b/music/style/screen.css
@@ -35,7 +35,7 @@ body {
     padding: 1em 2em;
     float: left;
 }
-.albums .album:last-child{background: #CACACA;}
+.library .albums .album:last-child{background: #CACACA;}
 .track {
   cursor: pointer;
 }
