--- a/music/style/screen.css
+++ b/music/style/screen.css
@@ -26,6 +26,7 @@ body {
 }
 .playlist .album{
     width: 89%;
+    margin-top: 10px;
 }
 .album {
     list-style: none;
@@ -35,7 +36,6 @@ body {
     padding: 1em 2em;
     float: left;
 }
-.albums .album:last-child{background: #CACACA;}
 .track {
   cursor: pointer;
 }
@@ -132,7 +132,7 @@ nav button.next:hover {
     background: rgba(55,55,55,0.7);
     width: 100%;
 }
-
+.library .albums .album:last-child{background: #CACACA;}
 ::-webkit-scrollbar {
     width: 10px;
     height: 5px;
