--- a/music/style/screen.css
+++ b/music/style/screen.css
@@ -130,11 +130,12 @@ nav button.next:hover {
     bottom: 0;
     background: rgba(55,55,55,0.7);
     width: 100%;
+    overflow-x:auto;
 }
 .library .albums .album:last-child{background: #CACACA;}
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 5px;
+    width: 15px;
+    height: 10px;
     opacity: 0.8;
 }
 ::-webkit-scrollbar-track-piece {
