--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -12,7 +12,11 @@ body {
   font-size: 13px;
   line-height: 19px;
   padding: 0;
-  margin: 0; }
+  margin: 0; 
+  background-image: url("../images/shadow.png"), url("../images/pixels.png");
+  background-position: 0 0, 0 50%;
+  background-repeat: repeat-x, repeat;
+}
 
 #go-back-home {
   margin: 40px 0 0; }
