--- a/_includes/links.html
+++ b/_includes/links.html
@@ -2,4 +2,6 @@
   {% for link in site.links %}
     <a target="{% if link.external %}_blank{% else %}_top{% endif %}" class="main" href="{{ link.url }}">{{ link.name }}</a>
   {% endfor %}
+  	<a target="_blank" class="main" href="/music/">Music</a>
+  	<a target="_blank" class="main" href="/lab/">Labs</a>
 </div>
