--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-<a id="go-back-home" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/scribble.png" alt="Home" width="53" height="59"></a>
+<a id="go-back-home" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/avatar.png" alt="Home" width="62" height="61"></a>
 <p>{{ site.title }}</p>
 <p>{{ site.description }}</p>
 </header>
