--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -321,3 +321,10 @@ figure {
   figure figcaption {
     font-size: 16px;
     margin-top: 1em; }
+.slogan{
+  color: #898989;
+  font-weight: bold;
+  font-style: italic;
+  font-family: cursive;
+  text-shadow: 0 0 2px #8F8F8F;
+}
