--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -1,7 +1,7 @@
 <br />
-<p>
+<p class="a-r">
   {{ site.signoff }}
 </p>
-<p>
+<p class="a-r">
   <img src="{{ site.baseurl }}/images/scribble3.png" alt="scribble" />
 </p>
