--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <script src='{{ site.baseurl }}/javascripts/basics.js' type='text/javascript'></script>
 <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 <meta content='text/html; charset=utf-8' http-equiv='content-type' />
+<meta name="baidu-site-verification" content="jxPLqyVORY" />
 <link href='/images/avatar.png' rel='shortcut icon'>
 {% if site.google_analytics_id %}
   {% include ga.html %}
