--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,6 +18,7 @@ body {
     background-attachment: fixed;
     background-repeat: repeat-x, repeat;
 }
+audio,img,video{max-width: 100%;}
 #go-back-home { margin: 40px 0 0 }
 #go-back-home:hover { background-image: none }
 .capitalize { text-transform: capitalize }
